# s3rds_backend

./: .gitignore  Makefile  READEME.md  pyproject.toml
core/: pytest.ini
core/backend/settings/: __init__.py
core/backend/settings/components/: __init__.py  common.py
core/backend/settings/environments/: production.py
core/base/: models.py
core/base/migrations/: 0001_initial.py  0002_profile_image3.py
core/config/: .env.template
