[tool.poetry]
name = "s3rds-backend"
version = "0.1.0"
description = ""
authors = ["admin1282 <gaikwadvinayak1282@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
django-split-settings = "^1.3.1"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
boto3 = "^1.34.97"
django-storages = "^1.14.2"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"